assets/css/style.css
/* ... */
@media (max-width: 480px) {
  .navigation .navbar-nav > li > a {
    padding: 8px 0 !important;
  }
}

@media (max-width: 768px) {
  .navigation .navbar-nav > li > a {
    padding: 8px 0 !important;
  }
}

.navigation .navbar-nav > li > a:hover, .navigation .navbar-nav > li > a:active, .navigation .navbar-nav > li > a:focus {
  background: none;
  color: var(--color-secondary-1-0);
}

.navigation .navbar-toggler {
  color: #fff;
  font-size: 30px;
  cursor: pointer;
  outline: none;
}

.navigation .nav .open > a {
  background: none;
}

.navigation .dropdown {
  padding: 0;
}

.navigation a {
  color: #fff;
}

.navigation a:hover {
  color: var(--color-secondary-1-0);
  text-decoration: underline;
}


.navigation .dropdown .dropdown-item {
  padding: 8px 15px;
  color: #fff;
  font-size: 13px;
}

.navigation .dropdown .dropdown-item:hover {
  background: transparent;
  color: var(--color-primary-0);
}

.navigation .dropdown .dropdown-menu {
  border-radius: 0;
  -webkit-transform-origin: top;
          transform-origin: top;
  -webkit-animation-fill-mode: forwards;
          animation-fill-mode: forwards;
  -webkit-transform: scale(1, 0);
          transform: scale(1, 0);
  background-color: #000;
  display: block;
  opacity: 0;
  transition: opacity 0.3s ease-in-out,-webkit-transform 0.3s;
  transition: transform 0.3s,opacity 0.3s ease-in-out;
  transition: transform 0.3s,opacity 0.3s ease-in-out,-webkit-transform 0.3s;
}

.navigation .dropdown:hover .dropdown-menu {
  transition: opacity 0.3s ease-in-out,-webkit-transform 0.3s;
  transition: transform 0.3s,opacity 0.3s ease-in-out;
  transition: transform 0.3s,opacity 0.3s ease-in-out,-webkit-transform 0.3s;
  -webkit-transform: scale(1, 1);
          transform: scale(1, 1);
  opacity: 1;
}

.navbar-brand {
  height: auto;
  padding: 8px 0;
}

.navbar-brand h1 {
  margin: 0;
}

.hero-area {
  padding: 150px 0;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background: var(--color-primary-0);
  background-image:  url("../images/shell_bleu_blur.png");
}

@media (max-width: 480px) {
  .hero-area {
    padding: 80px 0;
  }
}

.hero-area .block {
  color: #fff;
  padding-left: 30px;
}

@media (max-width: 480px) {
  .hero-area .block {
    padding: 0;
  }
}

.hero-area .block h2 {
  font-size: 4.35em;
  color: #fff;
  margin-bottom: 20px;
  font-weight: bold;
}

.hero-area .block p {
  color: #fff;
  margin-bottom: 20px;
  font-size: 30px;
}

.hero-area .block .list-inline {
  margin-top: 50px;
}

.hero-area .block .btn-main, .hero-area .block .btn-main-sm {
  margin-right: 8px;
}

.hero-area .btn-main {
  font-size: 18px;
  border: solid 1px transparent;
}

.video-player iframe {
  width: 100%;
  height: 100%;
}

.video-player .play-icon {
  position: absolute;
  left: 0;
  top: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  width: 100%;
  height: 100%;
  text-align: center;
}

.video-player .play-icon:hover i {
  -webkit-transform: scale(1.1);
          transform: scale(1.1);
}

.video-player .play-icon i {
  margin-left: 3px;
  height: 80px;
  width: 80px;
  border-radius: 50px;
  transition: -webkit-transform 300ms ease;
  transition: transform 300ms ease;
  transition: transform 300ms ease, -webkit-transform 300ms ease;
  background: #fff;
  color: var(--color-primary-0);
  line-height: 80px;
  font-size: 30px;
  margin-left: 5px;
}

.hero-area-video {
  height: 100vh;
  position: inherit !important;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.hero-area-video .block {
  color: #fff;
  text-align: center;
}

.hero-area-video .block h1 {
  font-size: 60px;
  font-weight: 700;
  margin-bottom: 20px;
}

.hero-area-video .block p {
  color: #fff;
  text-transform: uppercase;
  font-size: 12px;
  letter-spacing: 3px;
  margin-bottom: 20px;
}

.hero-area-video .block .btn-main, .hero-area-video .block .btn-main-sm {
  margin-top: 20px;
}

.dark-bg {
  background: rgba(0, 0, 0, 0.7);
  height: 100%;
  width: 100%;
  position: absolute;
  z-index: -1;
}

/*=================================================================
  About us section
==================================================================*/
.about {
  background: #fff;
}

.about h2 {
  font-size: 40px;
  font-weight: bold;
  margin-top: 0;
}

@media (max-width: 992px) {
  .about h2 {
    font-size: 25px;
  }
}

.about h4 {
  font-size: 14px;
  color: var(--color-primary-0);
  letter-spacing: 1px;
  text-transform: uppercase;
}

.about p {
  line-height: 1.6;
  margin-top: 20px;
}

.about .content {
  padding: 50px 0;
}

@media (max-width: 992px) {
  .about .content {
    padding: 5px 0;
  }
}

/*=================================================================
  About us 2 section
==================================================================*/
.about-2 {
  background: #F7F7F7;
  padding: 50px;
}

.about-2 h2 {
  position: relative;
}

.about-2 h2:before {
  position: absolute;
  left: -8%;
  top: 18px;
  content: '';
  display: inline-block;
  width: 6%;
  height: 6px;
  background-color: var(--color-secondary-1-2);
}

@media (max-width: 768px) {
  .about-2 h2:before {
    display: none;
  }
}

.about-2 .col-md-5 {
  margin-bottom: 40px;
}
/* ... */

